# r3

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindCheck.cmake  FindJemalloc.cmake  FindJudy.cmake  FindPCRE.cmake
src/: CMakeLists.txt  node.c  str.c
tests/: CMakeLists.txt  check_slug.c
